Fixed react-dock overflow styling.

--- a/app/containers/App.css
+++ b/app/containers/App.css
@@ -11,6 +11,10 @@
   letter-spacing: 0px;
 }
 
+.app-container > div > div > div:nth-child(2) {
+  overflow: initial !important;
+}
+
 .app-suggest-tab { 
   z-index: 10000000;
   top: 10px;
